--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="https://regulatednft.io/mint-app" property="og:title">
+    <meta content="🌐:https://regulatednft.io/mint-app" property="og:title">
     <meta content="
     🟢 ReGuLaTeD Private Minting is Now Live!
     
-    ‧SALE INFO|Mint Price: 2.5 SOL |Supply: 6969
+    Mint Price: 2.5 SOL
     " property="og:description">
     <meta content="https://pbs.twimg.com/profile_banners/1509686786083147779/1650310205/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/111" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/112" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Regulated NFT Collection</title>
     <link rel="shortcut icon" href="https://www.regulatednft.io/logo.png" />
