--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/popper.css">
+    <script src="js/popper.js"></script>
 
     <script>
         window.addEventListener('click', () => {
@@ -93,18 +95,23 @@
                         <img src=imgs/solana.png alt="solana">
                     </div>
                 </div>
-
-
+                <style>
+                    .alertify-notifier .ajs-message.ajs-success {
+                        background: #44ff00 !important;
+                        width: 270px !important;
+                    }
+                </style>
                 <div class="main-area__left">
                     <div class="slider-area">
                         <img class="animation" src="https://www.regulatednft.io/team/Dev%202.png" alt="GiF">
                     </div>
                 </div>
-
             </div>
+        </div>
     </section>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/last-scripts.js"></script>
 
     <script>
         const $plusButton = document.querySelector(".plus-btn");
