--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 https://regulatednft.io/mint-app" property="og:title">
+    <meta content="🌐 https://mint.regulatednft.io" property="og:title">
     <meta content="
      🟢 ReGuLaTeD Private Minting is NOW LIVE!
     
