--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 reelsofchange.com/mint" property="og:title">
+    <meta content="🌐 jikanstudios.io/mint" property="og:title">
     <meta content="
-     🟢 Reels Of Change Minting is NOW LIVE!
+     🟢 JIKAN STUDIOS Minting is NOW LIVE!
     
-     Mint Price: 1.5 SOL
+     Mint Price: 3 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1448283085859135492/1651877432/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1506112872270614535/1651641552/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/125" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/126" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Reels of Change</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1489231185918279684/c-y-tUz8_400x400.jpg" />
+    <title>JIKAN STUDIOS</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1521888253330165761/wK9TAzsJ_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -66,12 +66,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Reels of Change</h2>
+                <h2 class="right-title">JIKAN STUDIOS</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Creating immersive and skill based P2P games ⚡️ Join the troop
+                            Powered by $TROOP
                     </li>
                     </div>
 
@@ -103,7 +103,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://uploads-ssl.webflow.com/61fd572d5a0197bd7f1bb2dd/6207e7715e57f075890de6a6_IMG_4752)_small.png" alt="GiF">
+                        <img class="animation" src="https://cdn.discordapp.com/attachments/957819962779639890/966341312452362381/fire.jpg" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 1.5;
+        let itemPriceSelected = 3;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
