--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 akeo.launchlabs.app" property="og:title">
+    <meta content="🌐 teamakeo.launchlabs.app" property="og:title">
     <meta content="
       🟢 Team Akeo Minting is NOW LIVE!
     
