--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://susanoo.io/img/desk/9.png" alt="GiF">
+                        <img class="animation" src="imgs/1.png" alt="GiF">
                     </div>
                 </div>
             </div>
